# bili_downloader

./: .gitignore  Cargo.toml  README.md  test_mcp.js
.github/workflows/: release.yml
docs/: MCP_INTEGRATION_PLAN.md
src/: cli.rs  lib.rs  main.rs
src/auth/: errors.rs  mod.rs  qr_display.rs  session.rs  token.rs
src/common/: logger.rs  mod.rs  models.rs  utils.rs  wbi_utils.rs
src/common/api/: client.rs  error.rs
src/common/api/models/: auth.rs  common.rs  user_info.rs  video.rs
src/common/client/: client.rs  error.rs
src/common/client/models/: auth.rs  common.rs  user_info.rs
src/common/download_type/: bangumi.rs  common_video.rs  dash.rs  mp4.rs  video.rs
src/downloader/: core.rs  error.rs  manager.rs  merger.rs  mod.rs  models.rs  progress.rs  task.rs
src/mcp/: handlers.rs  mod.rs  resources.rs  server.rs  tools.rs
src/parser/: bangumi_parser.rs  cheese_parser.rs  detector.rs  errors.rs  mod.rs  models.rs  parser_trait.rs  stream_selector.rs  url_parser.rs  utils.rs  video_parser.rs  wbi_utils.rs
src/parser/detail_parser/: bangumi.rs  common_video.rs  course.rs  danmaku_handler.rs  error_utils.rs  mod.rs  models.rs  parser_trait.rs  stream_utils.rs  task_utils.rs
src/parser/detail_parser/models/: common_video.rs  course.rs  mod.rs  play_url.rs
src/post_process/: merger.rs  mod.rs
tests/: parser_integration.rs
